# learn-gpt

./: .gitignore  README.md  gen_md.py  gen_plan.py  learn.py  model.py  prompt.txt  pyproject.toml  run.py  sandbox.ipynb  st.py  store.py  test-db.json
app/: gen_plan.py  learn.py  log.py  prompt.txt  routes.py  sandbox.ipynb  store.py  util.py
app/prompts/: ai_role.txt  create_task.txt
examples/: chess_plan.md  golf_plan.md  nn_plan.json  nn_plan.md
scripts/: create_plan.py
web/: package-lock.json  package.json
web/_pages/: old-index.tsx
web/api/: Client.tsx  PlanAPI.tsx
web/app/: layout.tsx  page.tsx  providers.tsx
web/app/plan/[id]/: page.tsx
web/components/: Exercises.tsx  LearnHeader.tsx  Plan.tsx  Resources.tsx  Subject.tsx  TypingIndicator.tsx
web/pages/: _app.tsx  index.tsx
