[tool.poetry]
name = "learn-gpt"
version = "0.0.1"
description = ""
authors = ["David Byttow <david.byttow@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_gpt"}]

[tool.poetry.dependencies]
python = ">=3.10.4,<3.12"
jupyter = "^1.0.0"
streamlit = "^1.21.0"
pydantic = "^1.10.7"
langchain = "^0.0.138"
openai = "^0.27.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
